k8s/sample-django-app/sample-django-app-svc-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-django-app-svc
  namespace: itp
  labels:
    app: sample-django-app
spec:
  selector:
    tier: sample-django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
