k8s/sample-django-app/sample-django-app-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-django-app-svc-lb
  namespace: itp
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: sample-django-app
spec:
  selector:
    tier: sample-django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
  type: LoadBalancer
  loadBalancerIP: 10.1.16.95
