k8s/sample-django-app/sample-django-app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-django-app-ing
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /itp/(.*)
        backend:
          service:
            name: sample-django-app-svc
            port: 
              number: 80
